--- a/Quanlythuvien/Views/ucFrom/PhieuMuon/ucPhieuMuon.resx
+++ b/Quanlythuvien/Views/ucFrom/PhieuMuon/ucPhieuMuon.resx
@@ -118,43 +118,44 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="guna2Button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gbtnlaydulieu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANpJREFUSEvt
-        krENwjAURF2BxAguHBeuvEFmgF0Q04CExCpZJUWGSIPgG50jJ/Y3DqRIkSdd4X/3z0kUsbFuqqrqSC+o
-        xXgZguKRYP8HFbUobDByswazDqMR8MoegAvnSnJeBBfOleS8CAoWfSKcWSGWJrXgBPtDyg+FGA+Fin9T
-        n8NxeYovMMbslVI3Cvd+KVBP3tVau0N8wGdwjCGzJj19sEAuW2M9j9b6Mll+SCkPsAfcjLx7mKU3OsPm
-        CRaOGH2Fik9+DyOe4uCE2Rf8KtTwpJbmCDUbq0SIN7H0uwhkGBWAAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIJJREFUSEvd
+        lVEKwDAIQ3uS9qq72Y62raBQNCWu/ZE+COYj0U/LWdRaL507vk9Ia+35dMtc9rLOMwS3JOs8NEDIdUB9
+        VLYPQeGobB9CA4RcB9RHZfsQFI7K9iE0QMh1QH1Utg9B4ahsH0IDhDwHdiXrPBJYejKjl3We2Qv86/s8
+        hVJevg4hYHfHUEkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="gbtntimkiem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAL5JREFUSEvt
+        lDEOwyAMRZk7dYYKuF6X3i1rD9DeI2fIntjVN0KItjZDpUo8yYr8MTYQg5sME0K4xBjXlNIuxj7rCBmH
+        Et3rxK3xOELt0ORFEuWcr5BfsF8VWSDr4e1LAkhdJMZ8XHzGWN0NUhceR9wKSYesDO5HLLGF/y8g/6Dt
+        npaqmx6QdFi7iAqdIemhXZRL1naTdA9sg2yHEpXL9sY2+WKKnd5bRPaUY+Hk0MaLfGMWMfGzIt77E9yJ
+        BucOM/l7Xa34TtAAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="gbtnxoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANpJREFUSEvt
-        krENwjAURF2BxAguHBeuvEFmgF0Q04CExCpZJUWGSIPgG50jJ/Y3DqRIkSdd4X/3z0kUsbFuqqrqSC+o
-        xXgZguKRYP8HFbUobDByswazDqMR8MoegAvnSnJeBBfOleS8CAoWfSKcWSGWJrXgBPtDyg+FGA+Fin9T
-        n8NxeYovMMbslVI3Cvd+KVBP3tVau0N8wGdwjCGzJj19sEAuW2M9j9b6Mll+SCkPsAfcjLx7mKU3OsPm
-        CRaOGH2Fik9+DyOe4uCE2Rf8KtTwpJbmCDUbq0SIN7H0uwhkGBWAAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAGxJREFUSEvt
+        zcsJwDAQA1F3YpeS/pvKB/bo5CEIIQcP6CBszbbFK/Te91nqOWMmSlKae2ajJKV5Jvp8kv7//kDaiQTq
+        RAJ1IoE6kUCdSKBOJFAnEqgTCdRJOvjvgTQ1N2OMbSZ4yrWp+SKhtQP9gM/hpdCmmQAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="gbtnthem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANpJREFUSEvt
-        krENwjAURF2BxAguHBeuvEFmgF0Q04CExCpZJUWGSIPgG50jJ/Y3DqRIkSdd4X/3z0kUsbFuqqrqSC+o
-        xXgZguKRYP8HFbUobDByswazDqMR8MoegAvnSnJeBBfOleS8CAoWfSKcWSGWJrXgBPtDyg+FGA+Fin9T
-        n8NxeYovMMbslVI3Cvd+KVBP3tVau0N8wGdwjCGzJj19sEAuW2M9j9b6Mll+SCkPsAfcjLx7mKU3OsPm
-        CRaOGH2Fik9+DyOe4uCE2Rf8KtTwpJbmCDUbq0SIN7H0uwhkGBWAAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAD9JREFUSEtj
+        GAWjAAXIy8v/B2Eol/pg1AKCYOhYADOIVAzVThhg00wMhmonH1DNIFxg1AKCYOhbMAqGImBgAAA/50ax
+        iwcnSgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gbtnThongtin.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAWFJREFUSEvd
-        lD1OxDAUhHOQ/BeUSDQ0SFAgGg5Au8fgFrtXoOEsaULBYbZDWmaseU7WsZ2k3U960npmnu04WRe3T13X
-        fdM0A+oS1EBPsf20bfsSmTRazKptG9jZ12yCM8avsjzU6FmOPbLyIHiypqqqniUnYWa2yElynPmxSPJA
-        +zGPvyV7zMsel4WwkydJDtPDku1gT0z39H1/p8BZkgPjh7DRxvQkOTB274RzSZqAMarpXZIDO/uUfpTE
-        7JEaPUkO9io7SpqQsXi8ruvuQ8/G9CR5wqwnaQDzwpJ9RdLLNRF4v5bhb8kLLKPhRNLYSW4Bd9/gxX1I
-        2g17tcAgaQImL7XF6mVZPkKzL2xeIz3FHOZxLknXWAD/xgOqtfFaMQsONtZ0SxCK3aB/2NGbIh5q9ILs
-        +s2KxvlN+i05CTOWZ6/kPAj6GxW16QnYI2sbieOK1uqx5NAlGP2KopfajVEU/6ml8EPaFxd4AAAAAElF
-        TkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAIJJREFUSEvd
+        lVEKwDAIQ3uS9qq72Y62raBQNCWu/ZE+COYj0U/LWdRaL507vk9Ia+35dMtc9rLOMwS3JOs8NEDIdUB9
+        VLYPQeGobB9CA4RcB9RHZfsQFI7K9iE0QMh1QH1Utg9B4ahsH0IDhDwHdiXrPBJYejKjl3We2Qv86/s8
+        hVJevg4hYHfHUEkAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
